--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "date-fns": "^2.12.0",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
+    "react-date-range": "^1.0.3",
     "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
